--- a/preprocess2.ipynb
+++ b/preprocess2.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "id_to_acid = ['A', 'C', 'E', 'D', 'G', 'F', 'I', 'H', 'K', 'M', 'L', 'N', 'Q', 'P', 'S', 'R', 'T', 'W', 'V', 'Y', 'X', 'pad']\n",
@@ -45,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_new_encoding(data, data_name):\n",
@@ -109,9 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "TR5534_data = np.load(\"cullpdb+profile_5926.npy\")\n",
@@ -121,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -134,8 +124,7 @@
       "200\n",
       "300\n",
       "400\n",
-      "500\n",
-      "dumping\n"
+      "500\n"
      ]
     }
    ],
@@ -147,7 +136,6 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -214,8 +202,7 @@
       "5600\n",
       "5700\n",
       "5800\n",
-      "5900\n",
-      "dumping\n"
+      "5900\n"
      ]
     }
    ],
@@ -226,9 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('TR5534.json', 'w') as outfile:\n",
@@ -238,21 +223,26 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('CB513.json', 'w') as outfile:\n",
     "    json.dump(cb513_formatted, outfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "panoptic",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "panoptic"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
