--- a/train2.ipynb
+++ b/train2.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from torchvision import utils\n",
@@ -22,6 +20,7 @@
     "import time\n",
     "import itertools\n",
     "import matplotlib.pyplot as plt\n",
+    "import json\n",
     "import random\n",
     "import os\n",
     "import csv\n",
@@ -33,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import argparse\n",
@@ -58,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# if experiment == \"base1\":\n",
@@ -74,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# cfg = cfg.cfg\n",
@@ -91,22 +84,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# tr5534_data = pkl.load(open(\"TR5534.pkl\", \"rb\"))\n",
-    "cb513_data = pkl.load(open(\"CB513.pkl\", \"rb\"))"
+    "cb513_data = json.load(open(\"CB513.json\", \"r\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "len_train = len(cb513_data)\n",
@@ -121,10 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "ids = np.random.choice(len_train, len_train, replace=False)"
@@ -132,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -143,7 +128,7 @@
        "514"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,28 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Stacking 0/2 proteins\n",
-      "Stacking 250/2 proteins\n",
-      "Stacking 500/2 proteins\n",
-      "514 514 514\n",
-      "Stacking 0/2 proteins\n",
-      "Stacking 250/2 proteins\n",
-      "Stacking 500/2 proteins\n",
-      "514 514 514\n",
-      "Stacking 0/2 proteins\n",
-      "Stacking 250/2 proteins\n",
-      "Stacking 500/2 proteins\n",
-      "514 514 514\n",
-      "514 514 514\n"
+      "Loading 0/2 proteins\n",
+      "2 2 2\n",
+      "Loading 0/2 proteins\n",
+      "2 2 2\n",
+      "Loading 0/2 proteins\n",
+      "2 2 2\n",
+      "2 2 2\n"
      ]
     }
    ],
@@ -203,10 +180,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "latest_model_path = os.path.join(model_type, \"latest_model.pt\")\n",
@@ -229,10 +204,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "cnn_1d_3 = nn.Conv1d(in_channels=51, out_channels=100, stride=1, kernel_size=3, padding=1, bias=True).cuda()\n",
@@ -257,10 +230,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def forward(x):\n",
@@ -366,21 +337,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([5, 51, 700])\n",
-      "torch.Size([5, 700, 9])\n",
-      "torch.Size([5, 700, 9]) torch.Size([5, 700, 9])\n",
-      "(5, 700)\n",
-      "torch.Size([5, 700, 9])\n",
-      "933 933 933\n"
+      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
+      "        0., 0., 0., 0.], device='cuda:0')\n",
+      "tensor([[[1, 0, 0,  ..., 0, 0, 0],\n",
+      "         [1, 0, 0,  ..., 0, 0, 0],\n",
+      "         [1, 0, 0,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [0, 0, 0,  ..., 0, 0, 1],\n",
+      "         [0, 0, 0,  ..., 0, 0, 1],\n",
+      "         [0, 0, 0,  ..., 0, 0, 1]],\n",
+      "\n",
+      "        [[1, 0, 0,  ..., 0, 0, 0],\n",
+      "         [1, 0, 0,  ..., 0, 0, 0],\n",
+      "         [1, 0, 0,  ..., 0, 0, 0],\n",
+      "         ...,\n",
+      "         [0, 0, 0,  ..., 0, 0, 1],\n",
+      "         [0, 0, 0,  ..., 0, 0, 1],\n",
+      "         [0, 0, 0,  ..., 0, 0, 1]]], dtype=torch.int32)\n",
+      "torch.return_types.max(\n",
+      "values=tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
+      "        [1, 1, 1,  ..., 1, 1, 1]], dtype=torch.int32),\n",
+      "indices=tensor([[0, 0, 0,  ..., 8, 8, 8],\n",
+      "        [0, 0, 0,  ..., 8, 8, 8]]))\n"
      ]
     }
    ],
@@ -389,8 +374,14 @@
     "all_preds = []\n",
     "for iter, (X, Y, seq_lens) in enumerate(train_loader):\n",
     "    seq_lens = seq_lens.numpy()\n",
-    "    x = X.view([-1, 51, 700]).cuda()\n",
+    "    x = X.reshape([-1, 700, 51]).cuda()\n",
+    "    x = x.permute(0, 2, 1)\n",
+    "    print(x[0, 0:22, 0])\n",
     "    Y = Y.view([-1, 700, 9])\n",
+    "    print(Y[0:5])\n",
+    "    print(Y[0:5].max(axis=2))\n",
+    " \n",
+    "    break\n",
     "\n",
     "    out = forward(x)\n",
     "    print(Y.shape)\n",
@@ -414,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X = torch.ones((20, 50, 1))"
@@ -425,9 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_hot = X[:, 0:21, 0].argmax(axis=1)"
@@ -436,9 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "X_hot.shape"
@@ -447,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# model = Model().cuda()\n",
@@ -460,9 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# stats_dict, model = train(1, model, stats_path, train_loader, val_loader, optimizer, criterion,\n",
@@ -472,9 +453,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "panoptic",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "panoptic"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -486,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
