--- a/train2.ipynb
+++ b/train2.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,9 +264,9 @@
     "        h_b.append(h_t_b)\n",
     "\n",
     "\n",
-    "    F = torch.cat(h_f, dim=2)\n",
-    "    B = torch.cat(h_b, dim=2)\n",
-    "    O1 = torch.cat((F, B), dim=2).view((x.shape[0], 700, -1))\n",
+    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
+    "    B = torch.stack(h_b, dim=2).squeeze(0)      \n",
+    "    O1 = torch.cat((F, B), dim=2)\n",
     "    \n",
     "    \n",
     "    x = torch.cat((x, O1), dim=2)\n",
@@ -293,9 +293,10 @@
     "        h_f.append(h_t_f)\n",
     "        h_b.append(h_t_b)\n",
     "\n",
-    "    F = torch.cat(h_f, dim=2)\n",
-    "    B = torch.cat(h_b, dim=2, )\n",
-    "    O2 = (F + B).view((x.shape[0], 700, -1))\n",
+    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
+    "    B = torch.stack(h_b, dim=2).squeeze(0)   \n",
+    "    O2 = (F + B)\n",
+    "    \n",
     "    \n",
     "\n",
     "    x = torch.cat((x, O2), dim=2).permute(0, 2, 1)\n",
@@ -322,9 +323,9 @@
     "        h_f.append(h_t_f)\n",
     "        h_b.append(h_t_b)\n",
     "        \n",
-    "    F = torch.cat(h_f, dim=2)\n",
-    "    B = torch.cat(h_b, dim=2)\n",
-    "    x = (F + B).view([x.shape[0], 700, 500])\n",
+    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
+    "    B = torch.stack(h_b, dim=2).squeeze(0)   \n",
+    "    x = (F + B)\n",
     "    \n",
     "    x = fc1(x)\n",
     "    x = nn.functional.relu(x)\n",
@@ -337,38 +338,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
-      "        0., 0., 0., 0.], device='cuda:0')\n",
-      "tensor([[[1, 0, 0,  ..., 0, 0, 0],\n",
-      "         [1, 0, 0,  ..., 0, 0, 0],\n",
-      "         [1, 0, 0,  ..., 0, 0, 0],\n",
-      "         ...,\n",
-      "         [0, 0, 0,  ..., 0, 0, 1],\n",
-      "         [0, 0, 0,  ..., 0, 0, 1],\n",
-      "         [0, 0, 0,  ..., 0, 0, 1]],\n",
-      "\n",
-      "        [[1, 0, 0,  ..., 0, 0, 0],\n",
-      "         [1, 0, 0,  ..., 0, 0, 0],\n",
-      "         [1, 0, 0,  ..., 0, 0, 0],\n",
-      "         ...,\n",
-      "         [0, 0, 0,  ..., 0, 0, 1],\n",
-      "         [0, 0, 0,  ..., 0, 0, 1],\n",
-      "         [0, 0, 0,  ..., 0, 0, 1]]], dtype=torch.int32)\n",
-      "torch.return_types.max(\n",
-      "values=tensor([[1, 1, 1,  ..., 1, 1, 1],\n",
-      "        [1, 1, 1,  ..., 1, 1, 1]], dtype=torch.int32),\n",
-      "indices=tensor([[0, 0, 0,  ..., 8, 8, 8],\n",
-      "        [0, 0, 0,  ..., 8, 8, 8]]))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_labels = []\n",
     "all_preds = []\n",
@@ -376,14 +348,11 @@
     "    seq_lens = seq_lens.numpy()\n",
     "    x = X.reshape([-1, 700, 51]).cuda()\n",
     "    x = x.permute(0, 2, 1)\n",
-    "    print(x[0, 0:22, 0])\n",
     "    Y = Y.view([-1, 700, 9])\n",
-    "    print(Y[0:5])\n",
-    "    print(Y[0:5].max(axis=2))\n",
-    " \n",
-    "    break\n",
     "\n",
     "    out = forward(x)\n",
+    "    break\n",
+    "\n",
     "    print(Y.shape)\n",
     "    targets = Y.argmax(dim=1).long().cuda()\n",
     "    print(out.shape, Y.shape)\n",
