--- a/train2.ipynb
+++ b/train2.ipynb
@@ -204,20 +204,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "cnn_1d_3 = nn.Conv1d(in_channels=51, out_channels=100, stride=1, kernel_size=3, padding=1, bias=True).cuda()\n",
     "cnn_1d_5 = nn.Conv1d(in_channels=51, out_channels=100, stride=1, kernel_size=5, padding=2, bias=True).cuda()\n",
-    "gru_f_1 = nn.GRU(input_size=251, hidden_size=250, num_layers=1, batch_first=True).cuda()\n",
-    "gru_b_1 = nn.GRU(input_size=251, hidden_size=250, num_layers=1, batch_first=True).cuda()\n",
-    "\n",
-    "gru_f_2 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True).cuda()\n",
-    "gru_b_2 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True).cuda()\n",
-    "\n",
-    "gru_f_3 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True).cuda()\n",
-    "gru_b_3 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True).cuda()\n",
+    "gru_1 = nn.GRU(input_size=251, hidden_size=250, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
+    "gru_2 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
+    "gru_3 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
     "\n",
     "cnn_1d_1_1 = nn.Conv1d(in_channels=751, out_channels=500, stride=1, kernel_size=1, bias=True).cuda()\n",
     "cnn_1d_1_2 = nn.Conv1d(in_channels=1000, out_channels=500, stride=1, kernel_size=1, bias=True).cuda()\n",
@@ -230,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,86 +241,32 @@
     "    \n",
     "    \n",
     "    T = x.shape[1]\n",
-    "    h_t_f = torch.zeros(1, x.shape[0], 250).cuda()\n",
-    "    h_t_b = torch.zeros(1, x.shape[0], 250).cuda()\n",
+    "    h_t = torch.zeros(2, x.shape[0], 250).cuda()\n",
     "\n",
-    "    h_f = []\n",
-    "    h_b = []\n",
     "    \n",
-    "    \n",
-    "    for t in range(T):\n",
-    "        input_t_f = x[:, t, :].unsqueeze(1)\n",
-    "        input_t_b = x[:, t, :].unsqueeze(1)\n",
-    "        \n",
-    "        _, h_t_f = gru_f_1(input_t_f, h_t_f)\n",
-    "        _, h_t_b = gru_b_1(input_t_b, h_t_b)\n",
-    "\n",
-    "        h_f.append(h_t_f)\n",
-    "        h_b.append(h_t_b)\n",
-    "\n",
-    "\n",
-    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
-    "    B = torch.stack(h_b, dim=2).squeeze(0)      \n",
-    "    O1 = torch.cat((F, B), dim=2)\n",
-    "    \n",
+    "    O1, _ = gru_1(x, h_t)\n",
+    "       \n",
     "    \n",
     "    x = torch.cat((x, O1), dim=2)\n",
     "\n",
     "    x = nn.functional.relu(cnn_1d_1_1(x.view([-1, 751, 700])))\n",
+    "    x = x.permute(0, 2, 1)\n",
     "\n",
-    "\n",
-    "    h_t_f = torch.zeros(1, x.shape[0], 500).cuda()\n",
-    "    h_t_b = torch.zeros(1, x.shape[0], 500).cuda()\n",
-    "\n",
-    "    h_f = []\n",
-    "    h_b = []\n",
-    "\n",
-    "    x = x.permute([0, 2, 1])\n",
-    "    T = x.shape[1]\n",
-    "    for t in range(T):\n",
-    "        input_t_f = x[:, t, :].unsqueeze(1)\n",
-    "        input_t_b = x[:, t, :].unsqueeze(1)\n",
-    "\n",
-    "\n",
-    "        _, h_t_f = gru_f_2(input_t_f, h_t_f)\n",
-    "        _, h_t_b = gru_b_2(input_t_b, h_t_b)\n",
-    "\n",
-    "        h_f.append(h_t_f)\n",
-    "        h_b.append(h_t_b)\n",
-    "\n",
-    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
-    "    B = torch.stack(h_b, dim=2).squeeze(0)   \n",
-    "    O2 = (F + B)\n",
-    "    \n",
-    "    \n",
-    "\n",
+    "    h_t = torch.zeros(2, x.shape[0], 500).cuda()\n",
+    " \n",
+    "    O2, _ = gru_2(x, h_t)\n",
+    "    O2 = O2[:, :, 0:500] + O2[:, :, 500:]\n",
+    "          \n",
     "    x = torch.cat((x, O2), dim=2).permute(0, 2, 1)\n",
     "    x = nn.functional.relu(cnn_1d_1_2(x))\n",
     "    \n",
     "\n",
-    "    h_t_f = torch.zeros(1, x.shape[0], 500).cuda()\n",
-    "    h_t_b = torch.zeros(1, x.shape[0], 500).cuda()\n",
+    "    h_t = torch.zeros(2, x.shape[0], 500).cuda()\n",
     "\n",
-    "    h_f = []\n",
-    "    h_b = []\n",
-    "    \n",
+    "\n",
     "    x = x.permute([0, 2, 1])\n",
-    "    T = x.shape[1]\n",
-    "    \n",
-    "    for t in range(T):\n",
-    "        input_t_f = x[:, t, :].unsqueeze(1)\n",
-    "        input_t_b = x[:, t, :].unsqueeze(1)\n",
-    "\n",
-    "\n",
-    "        _, h_t_f = gru_f_3(input_t_f, h_t_f)\n",
-    "        _, h_t_b = gru_b_3(input_t_b, h_t_b)\n",
-    "\n",
-    "        h_f.append(h_t_f)\n",
-    "        h_b.append(h_t_b)\n",
-    "        \n",
-    "    F = torch.stack(h_f, dim=2).squeeze(0)\n",
-    "    B = torch.stack(h_b, dim=2).squeeze(0)   \n",
-    "    x = (F + B)\n",
+    "    x, _ = gru_3(x, h_t)\n",
+    "    x = x[:, :, 0:500] + x[:, :, 500:]\n",
     "    \n",
     "    x = fc1(x)\n",
     "    x = nn.functional.relu(x)\n",
@@ -338,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,6 +311,13 @@
     "    print(len(all_labels), sum(seq_lens), len(all_preds))\n",
     "    break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
