--- a/preprocess_prot_vec.ipynb
+++ b/preprocess_prot_vec.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_new_encoding(data, data_name, prot_vec=False):\n",
+    "def create_new_encoding(data, data_name, prot_vec=False, pssm_only=False):\n",
     "    formatted_data = {}\n",
     "    \n",
     "    for j, protein_seq in enumerate(data):\n",
@@ -100,6 +100,8 @@
     "                    \n",
     "                new_encoding += prot_vec_encoding_acid\n",
     "                \n",
+    "            elif (pssm_only):\n",
+    "                new_encoding += list(PSSM)\n",
     "            \n",
     "            else:\n",
     "                new_encoding += list(one_hot_encoding_acid[:22])\n",
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,24 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "cb513_prot_vec_only = create_new_encoding(CB513_data, \"CB513_prot_vec_only\", prot_vec=True)"
+    "# cb513_prot_vec_only = create_new_encoding(CB513_data, \"CB513_prot_vec_only\", prot_vec=True)"
    ]
   },
   {
@@ -184,8 +173,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('CB513_prot_vec_only.json', 'w') as outfile:\n",
-    "    json.dump(cb513_prot_vec_only, outfile)"
+    "# with open('CB513_prot_vec_only.json', 'w') as outfile:\n",
+    "#     json.dump(cb513_prot_vec_only, outfile)"
    ]
   },
   {
@@ -245,6 +234,360 @@
    "source": [
     "# with open('TR5534.json', 'w') as outfile:\n",
     "#     json.dump(tr5534_formatted, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_new_encoding_updated(data, data_name, encoding_type):\n",
+    "    formatted_data = {}\n",
+    "    \n",
+    "    for j, protein_seq in enumerate(data):\n",
+    "        protein_length = 0\n",
+    "        secondary_structure_onehot = []\n",
+    "        primary_structure = \"\"\n",
+    "        secondary_structure = \"\"\n",
+    "        \n",
+    "        prot_vec_values = []\n",
+    "        acid_ids = []\n",
+    "        \n",
+    "        one_hot_acid_values = []\n",
+    "        pp_dict_values = []\n",
+    "        pssm_values = []\n",
+    "        conservation_values = []\n",
+    "\n",
+    "        for i in range(700):\n",
+    "\n",
+    "            acid_start = i * 57\n",
+    "            acid_end = (i + 1) * 57\n",
+    "\n",
+    "            acid_properties = protein_seq[acid_start:acid_end]\n",
+    "\n",
+    "            one_hot_encoding_acid = acid_properties[:22]\n",
+    "            one_hot_encoding_label = acid_properties[22:31]\n",
+    "            \n",
+    "            PSSM = acid_properties[35:56]\n",
+    "\n",
+    "            acid_id = np.argmax(one_hot_encoding_acid)\n",
+    "            acid_ids.append(acid_id)\n",
+    "            \n",
+    "            label_id = np.argmax(one_hot_encoding_label)\n",
+    "\n",
+    "            # Add 1e-4 for numerical stability\n",
+    "            one_dim_conservation = [np.log(21) + np.sum(PSSM * np.log(PSSM + 1e-4))]\n",
+    "\n",
+    "            if acid_id == noseq_id_acid and label_id == noseq_id_label:\n",
+    "                pass\n",
+    "            else:            \n",
+    "                primary_structure += id_to_acid[acid_id]\n",
+    "                secondary_structure += id_to_label[label_id]\n",
+    "                protein_length += 1               \n",
+    "                \n",
+    "            # ProtVec \n",
+    "            if (i >= 2) and (acid_id != 21): \n",
+    "                triplet = id_to_acid[acid_ids[i-2]]+id_to_acid[acid_ids[i-1]]+id_to_acid[acid_ids[i]]\n",
+    "                try:\n",
+    "                    prot_vec_encoding_acid = prot_to_vec[triplet]\n",
+    "                except:\n",
+    "                    prot_vec_encoding_acid = np.zeros(100)\n",
+    "                #print(\"triplet\")\n",
+    "\n",
+    "            else:\n",
+    "                prot_vec_encoding_acid = np.zeros(100)\n",
+    "                #print(\"zero\")\n",
+    "                \n",
+    "            prot_vec_values.append(prot_vec_encoding_acid)\n",
+    "                \n",
+    "            one_hot_acid_values.append(one_hot_encoding_acid[:22])\n",
+    "            pp_dict_values.append(ppDict[id_to_acid[acid_id]])\n",
+    "            pssm_values.append(PSSM)\n",
+    "            conservation_values.append(one_dim_conservation)\n",
+    "\n",
+    "            secondary_structure_onehot += list(one_hot_encoding_label[:9])\n",
+    "            \n",
+    "        reformat = prot_vec_values[200:] + prot_vec_values[:200]\n",
+    "        prot_vec_values = reformat\n",
+    "        \n",
+    "#         print(np.array(prot_vec_values).shape)\n",
+    "#         print(np.array(one_hot_acid_values).shape)\n",
+    "#         print(np.array(pp_dict_values).shape)\n",
+    "#         print(np.array(pssm_values).shape)\n",
+    "#         print(np.array(conservation_values).shape)\n",
+    "\n",
+    "        if (encoding_type == \"one_hot_baseline\"):\n",
+    "            new_encoding = np.concatenate((\n",
+    "                np.array(one_hot_acid_values), \n",
+    "                np.array(pp_dict_values),\n",
+    "                np.array(pssm_values),\n",
+    "                np.array(conservation_values)\n",
+    "                ), axis=1)\n",
+    "            \n",
+    "        elif (encoding_type == \"prot_vec_only\"):\n",
+    "            new_encoding = np.array(prot_vec_values)\n",
+    "            \n",
+    "        elif (encoding_type == \"pssm_only\"):\n",
+    "            new_encoding = np.array(pssm_values)\n",
+    "            \n",
+    "        elif (encoding_type == \"prot_vec_baseline\"):\n",
+    "            new_encoding = np.concatenate((\n",
+    "                np.array(prot_vec_values), \n",
+    "                np.array(pp_dict_values),\n",
+    "                np.array(pssm_values),\n",
+    "                np.array(conservation_values)\n",
+    "                ), axis=1)\n",
+    "                \n",
+    "        new_encoding = list(new_encoding.reshape(-1))\n",
+    "                                   \n",
+    "        formatted_data[j] = {}\n",
+    "        formatted_data[j][\"protein_encoding\"] = new_encoding\n",
+    "        formatted_data[j][\"protein_length\"] = protein_length\n",
+    "        formatted_data[j][\"secondary_structure_onehot\"] = secondary_structure_onehot\n",
+    "        formatted_data[j][\"secondary_structure\"] = secondary_structure\n",
+    "        formatted_data[j][\"primary_structure\"] = primary_structure\n",
+    "        \n",
+    "        if j % 100 == 0:\n",
+    "            print(j)\n",
+    "\n",
+    "    return formatted_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cb513_pssm_only = create_new_encoding_updated(CB513_data, \"CB513_pssm_only\", encoding_type=\"pssm_only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('CB513_pssm_only.json', 'w') as outfile:\n",
+    "#     json.dump(cb513_pssm_only, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "2600\n",
+      "2700\n",
+      "2800\n",
+      "2900\n",
+      "3000\n",
+      "3100\n",
+      "3200\n",
+      "3300\n",
+      "3400\n",
+      "3500\n",
+      "3600\n",
+      "3700\n",
+      "3800\n",
+      "3900\n",
+      "4000\n",
+      "4100\n",
+      "4200\n",
+      "4300\n",
+      "4400\n",
+      "4500\n",
+      "4600\n",
+      "4700\n",
+      "4800\n",
+      "4900\n",
+      "5000\n",
+      "5100\n",
+      "5200\n",
+      "5300\n",
+      "5400\n",
+      "5500\n",
+      "5600\n",
+      "5700\n",
+      "5800\n",
+      "5900\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tr5534_pssm_only = create_new_encoding_updated(TR5534_data, \"tr5534_pssm_only\", encoding_type=\"pssm_only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('TR5534_pssm_only.json', 'w') as outfile:\n",
+    "#     json.dump(tr5534_pssm_only, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "cb513_prot_vec_baseline = create_new_encoding_updated(CB513_data, \"CB513_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('CB513_prot_vec_baseline.json', 'w') as outfile:\n",
+    "    json.dump(cb513_prot_vec_baseline, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "100\n",
+      "200\n",
+      "300\n",
+      "400\n",
+      "500\n",
+      "600\n",
+      "700\n",
+      "800\n",
+      "900\n",
+      "1000\n",
+      "1100\n",
+      "1200\n",
+      "1300\n",
+      "1400\n",
+      "1500\n",
+      "1600\n",
+      "1700\n",
+      "1800\n",
+      "1900\n",
+      "2000\n",
+      "2100\n",
+      "2200\n",
+      "2300\n",
+      "2400\n",
+      "2500\n",
+      "2600\n",
+      "2700\n",
+      "2800\n",
+      "2900\n",
+      "3000\n",
+      "3100\n",
+      "3200\n",
+      "3300\n",
+      "3400\n",
+      "3500\n",
+      "3600\n",
+      "3700\n",
+      "3800\n",
+      "3900\n",
+      "4000\n",
+      "4100\n",
+      "4200\n",
+      "4300\n",
+      "4400\n",
+      "4500\n",
+      "4600\n",
+      "4700\n",
+      "4800\n",
+      "4900\n",
+      "5000\n",
+      "5100\n",
+      "5200\n",
+      "5300\n",
+      "5400\n",
+      "5500\n",
+      "5600\n",
+      "5700\n",
+      "5800\n",
+      "5900\n"
+     ]
+    }
+   ],
+   "source": [
+    "tr5534_prot_vec_baseline = create_new_encoding_updated(TR5534_data, \"TR5534_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('TR5534_prot_vec_baseline.json', 'w') as outfile:\n",
+    "    json.dump(tr5534_prot_vec_baseline, outfile)"
    ]
   },
   {
