wavenet inspired architecture, wavenet + learned skip connection, wavenet + bnorm

--- a/train2.ipynb
+++ b/train2.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from torchvision import utils\n",
@@ -32,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import argparse\n",
@@ -55,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# if experiment == \"base1\":\n",
@@ -68,8 +74,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# cfg = cfg.cfg\n",
@@ -84,8 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# tr5534_data = pkl.load(open(\"TR5534.pkl\", \"rb\"))\n",
@@ -94,8 +104,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len_train = len(cb513_data)\n",
@@ -110,8 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "ids = np.random.choice(len_train, len_train, replace=False)"
@@ -119,8 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -128,7 +144,7 @@
        "514"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,8 +155,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,11 +166,7 @@
      "text": [
       "Loading 0/2 proteins\n",
       "2 2 2\n",
-      "Loading 0/2 proteins\n",
-      "2 2 2\n",
-      "Loading 0/2 proteins\n",
-      "2 2 2\n",
-      "2 2 2\n"
+      "2\n"
      ]
     }
    ],
@@ -161,55 +175,59 @@
     "                                     ids=[0, 2],\n",
     "                                     batch_size=batch_size,\n",
     "                                     shuffle=True,\n",
-    "                                     num_workers=num_workers)\n",
+    "                                     num_workers=num_workers,\n",
+    "                                     num_features=51)\n",
     "\n",
-    "val_loader, len_val = get_loader(protein_data=cb513_data,\n",
-    "                                 ids=[0, 2],\n",
-    "                                 batch_size=batch_size,\n",
-    "                                 shuffle=True,\n",
-    "                                 num_workers=num_workers)\n",
     "\n",
-    "test_loader, len_test = get_loader(protein_data=cb513_data,\n",
-    "                                   ids=[0, 2],\n",
-    "                                   batch_size=batch_size,\n",
-    "                                   shuffle=True,\n",
-    "                                   num_workers=num_workers)\n",
     "\n",
-    "print(len_train, len_val, len_test)"
+    "\n",
+    "print(len_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "latest_model_path = os.path.join(model_type, \"latest_model.pt\")\n",
-    "best_model_path = os.path.join(model_type, \"best_model.pt\")\n",
-    "optim_path = os.path.join(model_type, \"optim.pt\")\n",
-    "stats_path = os.path.join(model_type, \"stats.pkl\")\n",
+    "# latest_model_path = os.path.join(model_type, \"latest_model.pt\")\n",
+    "# best_model_path = os.path.join(model_type, \"best_model.pt\")\n",
+    "# optim_path = os.path.join(model_type, \"optim.pt\")\n",
+    "# stats_path = os.path.join(model_type, \"stats.pkl\")\n",
     "\n",
-    "def init_weights(m):\n",
-    "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
-    "        torch.nn.init._kaiming_(m.weight.data)\n",
+    "# def init_weights(m):\n",
+    "#     if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
+    "#         torch.nn.init._kaiming_(m.weight.data)\n",
     "\n",
     "\n",
-    "        # ??? https://github.com/pytorch/pytorch/issues/3418\n",
-    "        if m.bias is not None:\n",
-    "            m.bias.data.zero_()\n",
-    "            # torch.nn.init.xavier_uniform(m.bias.data)\n",
+    "#         # ??? https://github.com/pytorch/pytorch/issues/3418\n",
+    "#         if m.bias is not None:\n",
+    "#             m.bias.data.zero_()\n",
+    "#             # torch.nn.init.xavier_uniform(m.bias.data)\n",
     "            \n",
     "criterion = nn.CrossEntropyLoss()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cnn_1d_3 = nn.Conv1d(in_channels=51, out_channels=100, stride=1, kernel_size=3, padding=1, bias=True).cuda()\n",
     "cnn_1d_5 = nn.Conv1d(in_channels=51, out_channels=100, stride=1, kernel_size=5, padding=2, bias=True).cuda()\n",
+    "\n",
+    "cnn_1d_3_filter_list = [nn.Conv1d(in_channels=100, out_channels=100, stride=1, kernel_size=3, padding=1, bias=True).cuda() for _ in range (5)]\n",
+    "cnn_1d_3_gate_list = [nn.Conv1d(in_channels=100, out_channels=100, stride=1, kernel_size=3, padding=1, bias=True).cuda() for _ in range (5)]\n",
+    "\n",
+    "cnn_1d_5_filter_list = [nn.Conv1d(in_channels=100, out_channels=100, stride=1, kernel_size=5, padding=2, bias=True).cuda() for _ in range (5)]\n",
+    "cnn_1d_5_gate_list = [nn.Conv1d(in_channels=100, out_channels=100, stride=1, kernel_size=5, padding=2, bias=True).cuda() for _ in range (5)]\n",
+    "\n",
+    "\n",
     "gru_1 = nn.GRU(input_size=251, hidden_size=250, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
     "gru_2 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
     "gru_3 = nn.GRU(input_size=500, hidden_size=500, num_layers=1, batch_first=True, bidirectional=True).cuda()\n",
@@ -220,13 +238,17 @@
     "fc1 = nn.Linear(500, 1024).cuda()\n",
     "fc2 = nn.Linear(1024, 9).cuda()\n",
     "\n",
-    "embedding = nn.Embedding(22, 22).cuda()\n"
+    "embedding = nn.Embedding(22, 22).cuda()\n",
+    "tanh = nn.Tanh()\n",
+    "sigmoid = nn.Sigmoid()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {},
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def forward(x):\n",
@@ -234,8 +256,45 @@
     "    embedded = embedding(one_hot.long()).permute(0, 2, 1)\n",
     "    x[:, 0:22, :] = embedded\n",
     "    \n",
+    "    # [2, 100, 700]\n",
     "    local_block_3 = cnn_1d_3(x)\n",
+    "    local_block_3_sums = torch.zeros_like(local_block_3)\n",
+    "    local_block_3_sums += local_block_3\n",
+    "    \n",
+    "    for i in range(len(cnn_1d_3_list)):\n",
+    "        filter = cnn_1d_3_filter_list[i]\n",
+    "        gate = cnn_1d_3_gate_list[i]\n",
+    "        \n",
+    "        filtered = tanh(filter(local_block_3))\n",
+    "        gated = sigmoid(filter(local_block_3))\n",
+    "        \n",
+    "        local_block_3 = filtered * gated\n",
+    "        local_block_3_sums += local_block_3\n",
+    "        \n",
+    "    local_block_3 = local_block_3_sums\n",
+    "    \n",
+    "    \n",
     "    local_block_5 = cnn_1d_5(x)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    local_block_5 = cnn_1d_5(x)\n",
+    "    local_block_5_sums = torch.zeros_like(local_block_5)\n",
+    "    local_block_5_sums += local_block_5\n",
+    "    \n",
+    "    for i in range(len(cnn_1d_5_gate_list)):\n",
+    "        filter = cnn_1d_5_filter_list[i]\n",
+    "        gate = cnn_1d_5_gate_list[i]\n",
+    "        \n",
+    "        filtered = tanh(filter(local_block_5))\n",
+    "        gated = sigmoid(filter(local_block_5))\n",
+    "        \n",
+    "        local_block_5 = filtered * gated\n",
+    "        local_block_5_sums += local_block_5\n",
+    "        \n",
+    "    local_block_5 = local_block_5_sums\n",
+    "    \n",
+    "    \n",
     "    x = nn.functional.relu(torch.cat((x, local_block_3, local_block_5), dim=1))\n",
     "    x = x.permute(0, 2, 1)\n",
     "    \n",
@@ -279,8 +338,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "all_labels = []\n",
@@ -292,37 +353,35 @@
     "    Y = Y.view([-1, 700, 9])\n",
     "\n",
     "    out = forward(x)\n",
-    "    break\n",
     "\n",
-    "    print(Y.shape)\n",
     "    targets = Y.argmax(dim=1).long().cuda()\n",
-    "    print(out.shape, Y.shape)\n",
     "#     loss = criterion(out, targets)\n",
     "    labels = Y.argmax(dim=2).cpu().numpy()\n",
-    "    print(labels.shape)\n",
     "    predictions = out.argmax(axis=2).cpu().numpy()\n",
-    "    print(out.shape)\n",
     "    \n",
     "    \n",
     "    for label, prediction, length in zip(labels, predictions, seq_lens):\n",
     "        all_labels += list(label[:length])\n",
     "        all_preds += list(prediction[:length])\n",
     "        \n",
-    "    print(len(all_labels), sum(seq_lens), len(all_preds))\n",
     "    break"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = torch.ones((20, 50, 1))"
@@ -331,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_hot = X[:, 0:21, 0].argmax(axis=1)"
@@ -340,7 +401,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X_hot.shape"
@@ -349,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# model = Model().cuda()\n",
@@ -360,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# stats_dict, model = train(1, model, stats_path, train_loader, val_loader, optimizer, criterion,\n",
@@ -370,9 +437,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "panoptic",
    "language": "python",
-   "name": "python3"
+   "name": "panoptic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -384,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
