--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pickle as pkl"
@@ -12,7 +14,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "F = pkl.load(open(\"stats/base1/stats.pkl\", \"rb\"))"
@@ -22,6 +26,7 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -62,7 +67,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import torch\n",
@@ -75,6 +82,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -604,7 +612,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -639,7 +649,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1623,13 +1635,7 @@
       "             GRU-973  [[-1, 1, 250], [-1, 2, 250]]               0\n",
       "             GRU-974  [[-1, 1, 250], [-1, 2, 250]]               0\n",
       "             GRU-975  [[-1, 1, 250], [-1, 2, 250]]               0\n",
-      "             GRU-976  [[-1, 1, 250], [-1, 2, 250]]               0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "             GRU-976  [[-1, 1, 250], [-1, 2, 250]]               0\n",
       "             GRU-977  [[-1, 1, 250], [-1, 2, 250]]               0\n",
       "             GRU-978  [[-1, 1, 250], [-1, 2, 250]]               0\n",
       "             GRU-979  [[-1, 1, 250], [-1, 2, 250]]               0\n",
@@ -2701,13 +2707,7 @@
       "            GRU-2045  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-2046  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-2047  [[-1, 1, 500], [-1, 2, 500]]               0\n",
-      "            GRU-2048  [[-1, 1, 500], [-1, 2, 500]]               0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "            GRU-2048  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-2049  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-2050  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-2051  [[-1, 1, 500], [-1, 2, 500]]               0\n",
@@ -3836,13 +3836,7 @@
       "            GRU-3174  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-3175  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-3176  [[-1, 1, 500], [-1, 2, 500]]               0\n",
-      "            GRU-3177  [[-1, 1, 500], [-1, 2, 500]]               0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "            GRU-3177  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-3178  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-3179  [[-1, 1, 500], [-1, 2, 500]]               0\n",
       "            GRU-3180  [[-1, 1, 500], [-1, 2, 500]]               0\n",
@@ -4900,16 +4894,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "panoptic",
    "language": "python",
-   "name": "python3"
+   "name": "panoptic"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4921,7 +4917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
