--- a/preprocess_prot_vec.ipynb
+++ b/preprocess_prot_vec.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -338,6 +338,9 @@
     "                np.array(pssm_values),\n",
     "                np.array(conservation_values)\n",
     "                ), axis=1)\n",
+    "            \n",
+    "        elif (encoding_type == \"one_hot_only\"):\n",
+    "            new_encoding = np.array(one_hot_acid_values)\n",
     "                \n",
     "        new_encoding = list(new_encoding.reshape(-1))\n",
     "                                   \n",
@@ -356,29 +359,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cb513_one_hot_only = create_new_encoding_updated(CB513_data, \"CB513_one_hot_only\", encoding_type=\"one_hot_only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# with open('CB513_one_hot_only.json', 'w') as outfile:\n",
+    "#     json.dump(cb513_one_hot_only, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tr5534_one_hot_only = create_new_encoding_updated(TR5534_data, \"tr5534_one_hot_only\", encoding_type=\"one_hot_only\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# with open('TR5534_one_hot_only.json', 'w') as outfile:\n",
+    "#     json.dump(tr5534_one_hot_only, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# cb513_pssm_only = create_new_encoding_updated(CB513_data, \"CB513_pssm_only\", encoding_type=\"pssm_only\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,83 +416,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n",
-      "3600\n",
-      "3700\n",
-      "3800\n",
-      "3900\n",
-      "4000\n",
-      "4100\n",
-      "4200\n",
-      "4300\n",
-      "4400\n",
-      "4500\n",
-      "4600\n",
-      "4700\n",
-      "4800\n",
-      "4900\n",
-      "5000\n",
-      "5100\n",
-      "5200\n",
-      "5300\n",
-      "5400\n",
-      "5500\n",
-      "5600\n",
-      "5700\n",
-      "5800\n",
-      "5900\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tr5534_pssm_only = create_new_encoding_updated(TR5534_data, \"tr5534_pssm_only\", encoding_type=\"pssm_only\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,110 +435,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n"
-     ]
-    }
-   ],
-   "source": [
-    "cb513_prot_vec_baseline = create_new_encoding_updated(CB513_data, \"CB513_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('CB513_prot_vec_baseline.json', 'w') as outfile:\n",
-    "    json.dump(cb513_prot_vec_baseline, outfile)"
+    "# cb513_prot_vec_baseline = create_new_encoding_updated(CB513_data, \"CB513_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "100\n",
-      "200\n",
-      "300\n",
-      "400\n",
-      "500\n",
-      "600\n",
-      "700\n",
-      "800\n",
-      "900\n",
-      "1000\n",
-      "1100\n",
-      "1200\n",
-      "1300\n",
-      "1400\n",
-      "1500\n",
-      "1600\n",
-      "1700\n",
-      "1800\n",
-      "1900\n",
-      "2000\n",
-      "2100\n",
-      "2200\n",
-      "2300\n",
-      "2400\n",
-      "2500\n",
-      "2600\n",
-      "2700\n",
-      "2800\n",
-      "2900\n",
-      "3000\n",
-      "3100\n",
-      "3200\n",
-      "3300\n",
-      "3400\n",
-      "3500\n",
-      "3600\n",
-      "3700\n",
-      "3800\n",
-      "3900\n",
-      "4000\n",
-      "4100\n",
-      "4200\n",
-      "4300\n",
-      "4400\n",
-      "4500\n",
-      "4600\n",
-      "4700\n",
-      "4800\n",
-      "4900\n",
-      "5000\n",
-      "5100\n",
-      "5200\n",
-      "5300\n",
-      "5400\n",
-      "5500\n",
-      "5600\n",
-      "5700\n",
-      "5800\n",
-      "5900\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "tr5534_prot_vec_baseline = create_new_encoding_updated(TR5534_data, \"TR5534_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
+    "# with open('CB513_prot_vec_baseline.json', 'w') as outfile:\n",
+    "#     json.dump(cb513_prot_vec_baseline, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tr5534_prot_vec_baseline = create_new_encoding_updated(TR5534_data, \"TR5534_prot_vec_baseline\", encoding_type=\"prot_vec_baseline\")"
    ]
   },
   {
@@ -586,8 +467,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('TR5534_prot_vec_baseline.json', 'w') as outfile:\n",
-    "    json.dump(tr5534_prot_vec_baseline, outfile)"
+    "# with open('TR5534_prot_vec_baseline.json', 'w') as outfile:\n",
+    "#     json.dump(tr5534_prot_vec_baseline, outfile)"
    ]
   },
   {
